--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "latest",
     "null-loader": "^4.0.1",
     "react": "^17.0.1",
+    "react-audio-recorder": "github:MatrixFrog/react-audio-recorder#master",
     "react-dom": "^17.0.1",
     "redis": "^3.0.2",
     "remark": "11.0.2",
