--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nextjs",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3333",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3333",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -28,6 +28,7 @@
     "remark": "11.0.2",
     "remark-html": "10.0.0",
     "sharp": "^0.27.2",
+    "socket.io-client": "^4.0.1",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
