--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "remark": "11.0.2",
     "remark-html": "10.0.0",
     "sharp": "^0.27.2",
-    "socket.io-client": "^4.0.1",
+    "socket.io-client": "2.4.0",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
